# django-2-chosen1one

./: db.sqlite3  pyproject.toml
mysite/: settings.py  urls.py
news/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
news/migrations/: 0001_initial.py  0002_comment.py
news/templates/news/: article.html  base.html  edit.html  index.html
news/templates/registration/: login.html  sign-up.html
