[tool.poetry]
name = "django-2-chosen1one"
version = "0.1.0"
description = ""
authors = ["Azamat <dzhunebaev@gmail.com>"]
readme = "README.md"
packages = [{include = "django_2_chosen1one"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
django-debug-toolbar = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
